GPII-1579:  Updated to use new `gpii-binder` package and removed local copy of "binder" and tests.

--- a/tests/html/tests-templateMessage.html
+++ b/tests/html/tests-templateMessage.html
@@ -19,6 +19,9 @@
         <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
 
 
+        <!-- gpii-binder model<->view binder -->
+        <script type="text/javascript" src="../../node_modules/gpii-binder/src/js/binder.js"></script>
+
         <!-- Bring in Handlebars dependency -->
         <script type="text/javascript" src="../../bower_components/handlebars/handlebars.js"></script>
 
@@ -32,7 +35,6 @@
         <script type="text/javascript" src="../../src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="../../src/js/client/md-client.js"></script>
         <script type="text/javascript" src="../../src/js/client/renderer.js"></script>
-        <script type="text/javascript" src="../../src/js/client/binder.js"></script>
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="../../src/js/client/templateAware.js"></script>
