--- a/tests/static/tests-templateMessage.html
+++ b/tests/static/tests-templateMessage.html
@@ -32,7 +32,7 @@
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
-        <script type="text/javascript" src="/src/js/client/binder.js"></script>
+        <script type="text/javascript" src="/modules/gpii-binder/src/js/binder.js"></script>
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/client/templateAware.js"></script>
