GPII-1755:  Standardized on a single `gpii.handlebars` namespace.

--- a/tests/static/tests-templateMessage.html
+++ b/tests/static/tests-templateMessage.html
@@ -63,8 +63,8 @@
 
         <script type="text/javascript">
             <!-- instantiate test components -->
-            var initialized = gpii.templates.tests.templateMessage.initialized(".viewport-initialized");
-            var updated     = gpii.templates.tests.templateMessage.updated(".viewport-updated");
+            var initialized = gpii.handlebars.tests.templateMessage.initialized(".viewport-initialized");
+            var updated     = gpii.handlebars.tests.templateMessage.updated(".viewport-updated");
             updated.applier.change("message", "Some are born with data, some achieve data, and some have data thrust upon them.");
         </script>
     </body>
