GPII-1837: Migrated client-side dependencies from `bower` to `npm`.

--- a/tests/html/tests-templateMessage.html
+++ b/tests/html/tests-templateMessage.html
@@ -23,11 +23,11 @@
         <script type="text/javascript" src="../../node_modules/gpii-binder/src/js/binder.js"></script>
 
         <!-- Bring in Handlebars dependency -->
-        <script type="text/javascript" src="../../bower_components/handlebars/handlebars.js"></script>
+        <script type="text/javascript" src="../../node_modules/handlebars/dist/handlebars.js"></script>
 
         <!-- Bring in Pagedown dependencies -->
-        <script type="text/javascript" src="../../bower_components/pagedown/Markdown.Converter.js"></script>
-        <script type="text/javascript" src="../../bower_components/pagedown/Markdown.Sanitizer.js"></script>
+        <script type="text/javascript" src="../../node_modules/pagedown/Markdown.Converter.js"></script>
+        <script type="text/javascript" src="../../node_modules/pagedown/Markdown.Sanitizer.js"></script>
 
         <script type="text/javascript" src="../../src/js/common/helper.js"></script>
         <script type="text/javascript" src="../../src/js/common/equals.js"></script>
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="../static/js/tests-templateMessage.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="../../bower_components/foundation/css/foundation.css"/>
+        <link rel="stylesheet" href="../../node_modules/foundation/scss/foundation.scss"/>
     </head>
     <body>
         <div class="row">
