--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -19,11 +19,11 @@
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/ModelTransformationTransforms.js"></script>
         
         <!-- Bring in Handlebars dependency -->
-        <script type="text/javascript" src="/bc/handlebars/handlebars.js"></script>
+        <script type="text/javascript" src="/modules/handlebars/dist/handlebars.js"></script>
 
         <!-- Bring in Pagedown dependencies -->
-        <script type="text/javascript" src="/bc/pagedown/Markdown.Converter.js"></script>
-        <script type="text/javascript" src="/bc/pagedown/Markdown.Sanitizer.js"></script>
+        <script type="text/javascript" src="/modules/pagedown/Markdown.Converter.js"></script>
+        <script type="text/javascript" src="/modules/pagedown/Markdown.Sanitizer.js"></script>
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="/content/js/tests-templateFormControl.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="/bc/foundation/css/foundation.css"/>
+        <link rel="stylesheet" href="/modules/foundation/scss/foundation.scss"/>
     </head>
     <body>
         <div class="row">
