NOJIRA: Updated to `foundation-sites` version 6 instead of legacy `foundation` package.

--- a/tests/html/tests-templateMessage.html
+++ b/tests/html/tests-templateMessage.html
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="../static/js/tests-templateMessage.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="../../node_modules/foundation/scss/foundation.scss"/>
+        <link rel="stylesheet" href="../../node_modules/foundation-sites/dist/foundation.css"/>
     </head>
     <body>
         <div class="row">
