--- a/tests/static/tests-templateAware-serverAware.html
+++ b/tests/static/tests-templateAware-serverAware.html
@@ -42,7 +42,7 @@
         <script type="text/javascript" src="/content/js/tests-templateAware-serverAware.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="/modules/foundation/scss/foundation.scss"/>
+        <link rel="stylesheet" href="/modules/foundation-sites/dist/foundation.css"/>
     </head>
     <body>
         <div class="row">
