--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -44,7 +44,7 @@
         <script type="text/javascript" src="/content/js/tests-templateFormControl.js"></script>
 
         <!-- Foundation styles -->
-        <link rel="stylesheet" href="/modules/foundation/scss/foundation.scss"/>
+        <link rel="stylesheet" href="/modules/foundation-sites/dist/foundation.css"/>
     </head>
     <body>
         <div class="row">
