--- a/tests/static/tests-templateFormControl.html
+++ b/tests/static/tests-templateFormControl.html
@@ -49,7 +49,7 @@
     <body>
         <div class="row">
             <div class="column">
-                <h1>"Template Form Control" Component Tests</h1>
+                <h1 tabindex="0" class="initial-focus-here">"Template Form Control" Component Tests</h1>
 
                 <p>This page needs to be served up by a server that can also deliver the required handlebars templates.  The tests should not complete in a standalone browser.</p>
 
