GPII-1810:  Updated all dependencies.  FLUID-5963: Updated to standard ESLint configuration (and updated dependencies).

--- a/tests/static/tests-renderer-serverAware.html
+++ b/tests/static/tests-renderer-serverAware.html
@@ -51,18 +51,23 @@
         <!-- The markup we will be targeting -->
 
         <!-- Must come first so that we can tell that content has been inserted before it... -->
-        <div class="viewport-before" style="display:none">original content</div>
+        <h2>"Before" Tests</h2>
+        <div class="viewport-before">original content</div>
 
-        <div class="viewport-append" style="display:none">original content</div>
+        <h2>"Append" Tests</h2>
+        <div class="viewport-append">original content</div>
 
-        <div class="viewport-html" style="display:none">original content</div>
+        <h2>"HTML" Tests</h2>
+        <div class="viewport-html">original content</div>
 
-        <div class="viewport-prepend" style="display:none">original content</div>
+        <h2>"prepend" Tests</h2>
+        <div class="viewport-prepend">original content</div>
 
-        <div class="viewport-replaceWith" style="display:none">original content</div>
+        <h2>"replaceWith" Tests</h2>
+        <div class="viewport-replaceWith">original content</div>
 
         <!-- Must come last so that we can tell that content has been inserted after it... -->
-        <div class="viewport-after"  style="display:none">original content</div>
+        <div class="viewport-after" >original content</div>
 
         <script type="text/javascript">
             <!-- instantiate test component -->
