--- a/tests/static/tests-renderer-standalone.html
+++ b/tests/static/tests-renderer-standalone.html
@@ -21,9 +21,8 @@
         <!-- Bring in Handlebars dependency -->
         <script type="text/javascript" src="../../node_modules/handlebars/dist/handlebars.js"></script>
 
-        <!-- Bring in Pagedown dependencies -->
-        <script type="text/javascript" src="../../node_modules/pagedown/Markdown.Converter.js"></script>
-        <script type="text/javascript" src="../../node_modules/pagedown/Markdown.Sanitizer.js"></script>
+        <!-- Bring in markdown-it dependencies -->
+        <script type="text/javascript" src="../../node_modules/markdown-it/dist/markdown-it.js"></script>
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="../../node_modules/gpii-binder/src/js/binder.js"></script>
