--- a/tests/static/tests-serverMessageAware.html
+++ b/tests/static/tests-serverMessageAware.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Unit Tests for "Template Aware" components</title>
+        <title>Functional Tests for the "Server Message Aware" component grade.</title>
         <!-- Bring in jQuery and other dependencies -->
         <script type="text/javascript" src="/modules/infusion/src/lib/jquery/core/js/jquery.js"></script>
 
@@ -11,6 +11,7 @@
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidIoC.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/DataBinding.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/core/js/FluidView.js"></script>
+        <script type="text/javascript" src="/modules/infusion/src/framework/core/js/MessageResolver.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/lib/fastXmlPull/js/fastXmlPull.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/renderer/js/fluidParser.js"></script>
         <script type="text/javascript" src="/modules/infusion/src/framework/renderer/js/fluidRenderer.js"></script>
@@ -25,7 +26,6 @@
         <script type="text/javascript" src="/modules/markdown-it/dist/markdown-it.js"></script>
 
         <!-- Bring in client library being tested -->
-        <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/modules/gpii-binder/src/js/binder.js"></script>
         <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
@@ -37,10 +37,10 @@
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="/src/js/common/equals.js"></script>
-
+        <script type="text/javascript" src="/src/js/common/messageHelper.js"></script>
 
         <!-- Bring in our test helper -->
-        <script type="text/javascript" src="/content/js/tests-templateFormControl.js"></script>
+        <script type="text/javascript" src="/content/js/tests-serverMessageAware.js"></script>
 
         <!-- Foundation styles -->
         <link rel="stylesheet" href="/modules/foundation-sites/dist/css/foundation.css "/>
@@ -48,49 +48,19 @@
     <body>
         <div class="row">
             <div class="column">
-                <h1 tabindex="0" class="initial-focus-here">"Template Form Control" Component Tests</h1>
+                <h1>"Server Message Aware" Component Tests</h1>
 
                 <p>This page needs to be served up by a server that can also deliver the required handlebars templates.  The tests should not complete in a standalone browser.</p>
 
                 <hr/>
 
-                <div class="readyForSuccess">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForGetSuccess">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForStringifySuccess">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForStringSuccess">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForFailure">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForStringifyFailure">This content should not be visible.</div>
-
-                <hr/>
-
-                <div class="readyForStringFailure">This content should not be visible.</div>
+                <div class="viewport">This content should not be visible.</div>
             </div>
         </div>
 
         <script type="text/javascript">
             <!-- instantiate test components -->
-            var success          = gpii.tests.templateFormControl.readyForSuccess(".readyForSuccess");
-            var getSuccess       = gpii.tests.templateFormControl.readyForGetSuccess(".readyForGetSuccess");
-            var successString    = gpii.tests.templateFormControl.readyForStringSuccess(".readyForStringSuccess");
-            var successStringify = gpii.tests.templateFormControl.readyForStringifySuccess(".readyForStringifySuccess");
-            var failure          = gpii.tests.templateFormControl.readyForFailure(".readyForFailure");
-            var stringifyFailure = gpii.tests.templateFormControl.readyForStringifyFailure(".readyForStringifyFailure");
-            var stringFailure    = gpii.tests.templateFormControl.readyForStringFailure(".readyForStringFailure");
+            var serverMessageAware = gpii.tests.templateAware.serverMessageAware(".viewport");
         </script>
     </body>
 </html>
