GPII-2767: Updated to remove the need to explicitly pass the root context, and to restore support for passing a sub-context.

--- a/tests/static/tests-templateAware-serverAware.html
+++ b/tests/static/tests-templateAware-serverAware.html
@@ -36,6 +36,7 @@
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="/src/js/common/equals.js"></script>
+        <script type="text/javascript" src="/src/js/common/messageHelper.js"></script>
 
         <!-- Bring in our test helper -->
         <script type="text/javascript" src="/content/js/tests-templateAware-serverAware.js"></script>
