--- a/tests/static/tests-templateAware-standalone.html
+++ b/tests/static/tests-templateAware-standalone.html
@@ -33,6 +33,7 @@
         <script type="text/javascript" src="../../src/js/client/md-client.js"></script>
         <script type="text/javascript" src="../../src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="../../src/js/common/equals.js"></script>
+        <script type="text/javascript" src="../../src/js/common/messageHelper.js"></script>
 
         <!-- Bring in our test helper -->
         <script type="text/javascript" src="./js/tests-templateAware-standalone.js"></script>
