--- a/tests/static/tests-serverMessageAware.html
+++ b/tests/static/tests-serverMessageAware.html
@@ -14,6 +14,7 @@
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/common/lib/i18n.js"></script>
+        <script type="text/javascript" src="/src/js/common/lib/delete-and-add.js"></script>
         <script type="text/javascript" src="/src/js/common/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/node_modules/gpii-binder/src/js/binder.js"></script>
