--- a/tests/static/tests-templateAware-standalone.html
+++ b/tests/static/tests-templateAware-standalone.html
@@ -13,6 +13,7 @@
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="../../src/js/common/lib/i18n.js"></script>
+        <script type="text/javascript" src="../../src/js/common/lib/delete-and-add.js"></script>
         <script type="text/javascript" src="../../node_modules/gpii-binder/src/js/binder.js"></script>
         <script type="text/javascript" src="../../src/js/client/templateAware.js"></script>
         <script type="text/javascript" src="../../src/js/common/renderer.js"></script>
