--- a/tests/static/tests-templateMessage.html
+++ b/tests/static/tests-templateMessage.html
@@ -17,6 +17,7 @@
         <script type="text/javascript" src="../../src/js/common/md-common.js"></script>
         <script type="text/javascript" src="../../src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="../../src/js/common/lib/i18n.js"></script>
+        <script type="text/javascript" src="../../src/js/common/lib/delete-and-add.js"></script>
         <script type="text/javascript" src="../../src/js/common/messageHelper.js"></script>
         <script type="text/javascript" src="../../src/js/client/md-client.js"></script>
         <script type="text/javascript" src="../../src/js/common/renderer.js"></script>
