--- a/tests/browser-fixtures/tests-renderer-standalone.html
+++ b/tests/browser-fixtures/tests-renderer-standalone.html
@@ -6,6 +6,8 @@
         <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
         <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
 
+        <!-- IoC test dependencies -->
+
         <!-- Bring in Handlebars dependency -->
         <script type="text/javascript" src="../../node_modules/handlebars/dist/handlebars.js"></script>
 
@@ -33,6 +35,9 @@
         <script type="text/javascript" src="/src/js/client/templateMessage.js"></script>
         <script type="text/javascript" src="/src/js/client/templateRequestAndRender.js"></script>
         <script type="text/javascript" src="/node_modules/gpii-binder/src/js/binder.js"></script>
+
+        <!-- Required for Fluid IoC tests. -->
+        <script type="text/javascript" src="/node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
 
         <!-- QUnit/jqUnit and Testem dependencies -->
         <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
