--- a/tests/browser-fixtures/tests-templateFormControl.html
+++ b/tests/browser-fixtures/tests-templateFormControl.html
@@ -34,6 +34,9 @@
         <script type="text/javascript" src="/src/js/client/templateRequestAndRender.js"></script>
         <script type="text/javascript" src="/node_modules/gpii-binder/src/js/binder.js"></script>
 
+        <!-- Required for Fluid IoC tests. -->
+        <script type="text/javascript" src="/node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
+
         <!-- QUnit/jqUnit and Testem dependencies -->
         <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <script type="text/javascript" src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
