GPII-4100: Various small twiddles to attempt to resolve browser test hangs.

--- a/tests/browser-fixtures/all-tests.html
+++ b/tests/browser-fixtures/all-tests.html
@@ -13,7 +13,7 @@
             <!-- These cannot be run using only a browser, most need things like the initBlock helper, the message bundling middleware, and/or the template bundling middleware. -->
             QUnit.testSuites([
                 // TODO: alphebetise once all are working.
-                // TODO: These still throw zero assertion errors when run locally.
+                // TODO: These still throw zero assertion errors occasionally when run locally.
                 /*
                     1 /dispatcher/initblock?myvar=bar
                     1 /tests/browser-fixtures/tests-hasRequiredOptions.html
