GPII-4100: Standardised paths to node_modules content.

--- a/tests/browser-fixtures/all-tests.html
+++ b/tests/browser-fixtures/all-tests.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8" />
         <title>gpii-handlebars browser "all tests" rollup.</title>
 
-        <link rel="stylesheet" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
-        <script src="../../node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
-        <link rel="stylesheet" href="../../node_modules/infusion/tests/lib/qunit/addons/composite/qunit-composite.css">
+        <link rel="stylesheet" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <script src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
+        <link rel="stylesheet" href="/node_modules/infusion/tests/lib/qunit/addons/composite/qunit-composite.css">
         <script src="/testem.js"></script>
-        <script src="../../node_modules/infusion/tests/lib/qunit/addons/composite/qunit-composite.js"></script>
+        <script src="/node_modules/infusion/tests/lib/qunit/addons/composite/qunit-composite.js"></script>
         <script>
             <!-- These cannot be run using only a browser, most need things like the initBlock helper, the message bundling middleware, and/or the template bundling middleware. -->
             QUnit.testSuites([
