--- a/tests/browser-fixtures/tests-hasRequiredOptions.html
+++ b/tests/browser-fixtures/tests-hasRequiredOptions.html
@@ -3,13 +3,13 @@
         <title>Tests for "Required Options" grade.</title>
 
         <!-- Fluid dependencies -->
-        <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
-        <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
+        <link rel="stylesheet" media="screen" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <script type="text/javascript" src="/node_modules/infusion/dist/infusion-all.js"></script>
         <!-- Not included in "all" -->
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
+        <script type="text/javascript" src="/node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
 
         <!-- QUnit/jqUnit and Testem dependencies -->
-        <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <script type="text/javascript" src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
         <script src="/testem.js"></script>
