--- a/tests/browser-fixtures/tests-serverMessageAware.html
+++ b/tests/browser-fixtures/tests-serverMessageAware.html
@@ -3,8 +3,8 @@
         <title>Functional Tests for the  component grade.</title>
 
         <!-- Bring in jQuery and fluid dependencies -->
-        <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
+        <script type="text/javascript" src="/node_modules/infusion/dist/infusion-all.js"></script>
+        <script type="text/javascript" src="/node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
 
         <!-- Bring in Handlebars dependency -->
         <script type="text/javascript" src="/node_modules/handlebars/dist/handlebars.js"></script>
@@ -38,7 +38,7 @@
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
 
         <!-- QUnit/jqUnit and Testem dependencies -->
-        <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <script type="text/javascript" src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
         <script src="/testem.js"></script>
