--- a/tests/browser-fixtures/tests-renderer-serverResourceAware.html
+++ b/tests/browser-fixtures/tests-renderer-serverResourceAware.html
@@ -39,7 +39,7 @@
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
 
         <!-- QUnit/jqUnit and Testem dependencies -->
-        <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <script type="text/javascript" src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
         <script src="/testem.js"></script>
