--- a/tests/browser-fixtures/tests-templateMessage.html
+++ b/tests/browser-fixtures/tests-templateMessage.html
@@ -3,14 +3,14 @@
         <title>Tests for "Template Message" component</title>
 
         <!-- Bring in jQuery and fluid dependencies -->
-        <script type="text/javascript" src="../../node_modules/infusion/dist/infusion-all.js"></script>
-        <script type="text/javascript" src="../../node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
+        <script type="text/javascript" src="/node_modules/infusion/dist/infusion-all.js"></script>
+        <script type="text/javascript" src="/node_modules/infusion/src/framework/core/js/MessageResolver.js"></script>
 
         <!-- Bring in Handlebars dependency -->
-        <script type="text/javascript" src="../../node_modules/handlebars/dist/handlebars.js"></script>
+        <script type="text/javascript" src="/node_modules/handlebars/dist/handlebars.js"></script>
 
         <!-- Bring in markdown-it dependencies -->
-        <script type="text/javascript" src="../../node_modules/markdown-it/dist/markdown-it.js"></script>
+        <script type="text/javascript" src="/node_modules/markdown-it/dist/markdown-it.js"></script>
 
         <!-- Bring in client library being tested -->
         <script type="text/javascript" src="/src/js/common/lib/i18n.js"></script>
@@ -38,7 +38,7 @@
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/utils/js/IoCTestUtils.js"></script>
 
         <!-- QUnit/jqUnit and Testem dependencies -->
-        <link rel="stylesheet" media="screen" href="../../node_modules/infusion/tests/lib/qunit/css/qunit.css" />
+        <link rel="stylesheet" media="screen" href="/node_modules/infusion/tests/lib/qunit/css/qunit.css" />
         <script type="text/javascript" src="/node_modules/infusion/tests/lib/qunit/js/qunit.js"></script>
         <script type="text/javascript" src="/node_modules/infusion/tests/test-core/jqUnit/js/jqUnit.js"></script>
         <script src="/testem.js"></script>
