--- a/tests/browser-fixtures/all-tests.html
+++ b/tests/browser-fixtures/all-tests.html
@@ -12,27 +12,17 @@
         <script>
             <!-- These cannot be run using only a browser, most need things like the initBlock helper, the message bundling middleware, and/or the template bundling middleware. -->
             QUnit.testSuites([
-                // TODO: alphebetise once all are working.
-                // TODO: These still throw zero assertion errors occasionally when run locally.
-                /*
-                    1 /dispatcher/initblock?myvar=bar
-                    1 /tests/browser-fixtures/tests-hasRequiredOptions.html
-                    4 /tests/browser-fixtures/tests-renderer-standalone.html
-                    2 /tests/browser-fixtures/tests-templateAware-standalone.html
-                 */
                 "/dispatcher/initblock?myvar=bar",
                 "/tests/browser-fixtures/tests-hasRequiredOptions.html",
-                "/tests/browser-fixtures/tests-renderer-standalone.html",
-                "/tests/browser-fixtures/tests-templateAware-standalone.html",
-
-                // Seems OK
-                "/tests/browser-fixtures/tests-templateMessage.html",
-
-                // TODO: Seems to hang?
-                "/tests/browser-fixtures/tests-templateAware-serverResourceAware.html",
-                "/tests/browser-fixtures/tests-serverMessageAware.html",
+                // TODO: Remove this once we know what the issue is.
+                "/tests/browser-fixtures/tests-listener-problems.html",
                 "/tests/browser-fixtures/tests-renderer-serverResourceAware.html",
-                "/tests/browser-fixtures/tests-templateFormControl.html"
+                "/tests/browser-fixtures/tests-renderer-standalone.html",
+                "/tests/browser-fixtures/tests-serverMessageAware.html",
+                "/tests/browser-fixtures/tests-templateAware-standalone.html",
+                "/tests/browser-fixtures/tests-templateAware-serverResourceAware.html",
+                "/tests/browser-fixtures/tests-templateFormControl.html",
+                "/tests/browser-fixtures/tests-templateMessage.html"
             ]);
         </script>
     </head>
