GPII-4100: Refactored to use recent potentia-ii, which required rewriting the `getMessage` helper and i18n stack.

--- a/tests/browser-fixtures/tests-renderer-standalone.html
+++ b/tests/browser-fixtures/tests-renderer-standalone.html
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
         <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
+        <script type="text/javascript" src="/src/js/client/messageHelper.js"></script>
         <script type="text/javascript" src="/src/js/common/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/serverResourceAware.js"></script>
