--- a/tests/browser-fixtures/tests-renderer-serverResourceAware.html
+++ b/tests/browser-fixtures/tests-renderer-serverResourceAware.html
@@ -22,11 +22,13 @@
         <script type="text/javascript" src="/src/js/common/jsonify.js"></script>
         <script type="text/javascript" src="/src/js/common/md-common.js"></script>
         <script type="text/javascript" src="/src/js/common/messageHelper.js"></script>
+        <script type="text/javascript" src="/src/js/common/renderer.js"></script>
+
 
         <script type="text/javascript" src="/src/js/client/hasRequiredOptions.js"></script>
         <script type="text/javascript" src="/src/js/client/ajaxCapable.js"></script>
+        <script type="text/javascript" src="/src/js/client/messageHelper.js"></script>
         <script type="text/javascript" src="/src/js/client/md-client.js"></script>
-        <script type="text/javascript" src="/src/js/common/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/renderer.js"></script>
         <script type="text/javascript" src="/src/js/client/serverResourceAware.js"></script>
         <script type="text/javascript" src="/src/js/client/templateManager.js"></script>
