GH-37: Committed work in progress for discussion.

--- a/tests/browser-fixtures/all-tests.html
+++ b/tests/browser-fixtures/all-tests.html
@@ -12,15 +12,16 @@
         <script>
             <!-- These cannot be run using only a browser, most need things like the initBlock helper, the message bundling middleware, and/or the template bundling middleware. -->
             QUnit.testSuites([
-                "/tests/browser-fixtures/tests-hasRequiredOptions.html",
-                "/tests/browser-fixtures/tests-renderer-serverResourceAware.html",
-                "/tests/browser-fixtures/tests-renderer-standalone.html",
-                "/tests/browser-fixtures/tests-serverMessageAware.html",
-                "/tests/browser-fixtures/tests-templateAware-standalone.html",
+                // "/tests/browser-fixtures/tests-hasRequiredOptions.html",
+                // "/tests/browser-fixtures/tests-renderer-serverResourceAware.html",
+                // "/tests/browser-fixtures/tests-renderer-standalone.html",
+                // "/tests/browser-fixtures/tests-serverMessageAware.html",
+                // "/tests/browser-fixtures/tests-templateAware-standalone.html",
+                // TODO: Figure out why this fails.
                 "/tests/browser-fixtures/tests-templateAware-serverResourceAware.html",
-                "/tests/browser-fixtures/tests-templateFormControl.html",
-                "/tests/browser-fixtures/tests-templateMessage.html",
-                "/dispatcher/initblock?myvar=bar"
+                // "/tests/browser-fixtures/tests-templateFormControl.html",
+                // "/tests/browser-fixtures/tests-templateMessage.html",
+                // "/dispatcher/initblock?myvar=bar"
             ]);
         </script>
     </head>
